--- a/ShopeeCoinsCalc/Properties/launchSettings.json
+++ b/ShopeeCoinsCalc/Properties/launchSettings.json
@@ -26,7 +26,8 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:7182;http://localhost:5021",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "BASE_HREF": "/"
       }
     },
     "IIS Express": {
